# idobata

./: .gitignore  Cargo.toml  README.md  init.sh
src/: Cargo.toml  main.rs
