[package]
authors = ["yukyu"]
edition = "2018"
name = "idobata"
version = "1.0.0"

[dependencies]
serenity = { version = "0.11.4", default-features = false, features = ["client", "gateway", "rustls_backend", "model"]}
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"